--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "svg-pan-zoom": "ariutta/svg-pan-zoom",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
