--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
+language: node_js
+node_js:
+  - 12.7.0
+cache: npm
+install:
+  - yarn install
+script:
+  - yarn build
 deploy:
   provider: pages
   skip_cleanup: true
