--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ deploy:
   github_token: $GITHUB_TOKEN
   keep_history: true
   local_dir: dist
+  target-branch: gh-pages
   on:
-    branch: gh-pages
+    branch: dev
